Added News Api Provider

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -74,6 +74,10 @@ page-home {
     @media (min-width:$break-4) {
       width:31.91%;
     }
+
+    a {
+      text-decoration: none;
+    }
   }
 
   ion-row {
