--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -96,6 +96,25 @@ page-home {
 
   }
 
+  ion-segment {
+    display: block;
+    white-space: nowrap;
+    font-size: 0;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+      display: none;
+    }
+
+    ion-segment-button.segment-button {
+      display: inline-block;
+      min-width: 100px;
+      width: auto;
+    }
+  }
+
   .segment-md .segment-button {
     height: 100%;
   }
